sqlparser/libnxl/tsql/sqlparser_bison.output
Terminals unused in grammar

   CONDITIONLESS_JOIN
   NATURAL
   ADD
   ANY
   ALTER
   BEGI
   BINARY
   BOTH
   CASCADE
   CHARACTER
   CLUSTER
   COMMENT
   COMMIT
   CONSISTENT
   COLUMN
   COLUMNS
   CREATE
   CREATETIME
   CURRENT_USER
   CHANGE_OBI
   SWITCH_CLUSTER
   DATE
   DEALLOCATE
   DECIMAL
   DEFAULT
   DELETE
   DESCRIBE
   DOUBLE
   DROP
   DUAL
   ERROR
   EXECUTE
   EXPLAIN
   FLOAT
   FROZEN
   GLOBAL
   GLOBAL_ALIAS
   GRANT
   HINT_BEGIN
   HINT_END
   HOTSPOT
   IDENTIFIED
   IF
   INSERT
   INTO
   KEY
   LEADING
   LIMIT
   LOCAL
   LOCKED
   MEMORY
   MODIFYTIME
   MASTER
   NUMERIC
   PARAMETERS
   PASSWORD
   PRECISION
   PREPARE
   PRIMARY
   READ_STATIC
   RENAME
   REPLACE
   RESTRICT
   PRIVILEGES
   REVOKE
   ROLLBACK
   KILL
   READ_CONSISTENCY
   SCHEMA
   SCOPE
   SESSION
   SESSION_ALIAS
   SET
   SHOW
   SNAPSHOT
   SPFILE
   START
   STATIC
   SYSTEM
   STRONG
   SET_MASTER_CLUSTER
   SET_SLAVE_CLUSTER
   SLAVE
   TABLE
   TABLES
   TIME
   TIMESTAMP
   TRAILING
   TRANSACTION
   TO
   UPDATE
   USER
   VALUES
   VARCHAR
   VARBINARY
   WORK
   PROCESSLIST
   QUERY
   CONNECTION
   WEAK
   DISABLE


Grammar

    0 $accept: sql_stmt $end

    1 sql_stmt: stmt_list END_P

    2 stmt_list: stmt
    3          | stmt ';' stmt_list

    4 stmt: %empty
    5     | select_stmt

    6 select_stmt: select_no_parens

    7 select_with_parens: '(' select_no_parens ')'
    8                   | '(' select_with_parens ')'

    9 select_no_parens: select_clause opt_order_by opt_for_clause opt_option_query_hint
   10                 | with_clause select_clause opt_order_by opt_for_clause opt_option_query_hint

   11 opt_option_query_hint: %empty
   12                      | OPTION '(' query_hint_list ')'

   13 query_hint_list: query_hint
   14                | query_hint ',' query_hint_list

   15 query_hint: HASH GROUP
   16           | ORDER GROUP
   17           | CONCAT UNION
   18           | HASH UNION
   19           | MERGE UNION
   20           | LOOP JOIN
   21           | MERGE JOIN
   22           | HASH JOIN
   23           | EXPAND VIEWS
   24           | FAST INTNUM
   25           | FORCE ORDER
   26           | FORCE EXTERNALPUSHDOWN
   27           | IGNORE_NONCLUSTERED_COLUMNSTORE_INDEX
   28           | KEEP PLAN
   29           | KEEPFIXED PLAN
   30           | MAX_GRANT_PERCENT COMP_EQ APPROXNUM
   31           | MAX_GRANT_PERCENT COMP_EQ INTNUM
   32           | MIN_GRANT_PERCENT COMP_EQ APPROXNUM
   33           | MIN_GRANT_PERCENT COMP_EQ INTNUM
   34           | MAXDOP INTNUM
   35           | MAXRECURSION INTNUM
   36           | NO_PERFORMANCE_SPOOL
   37           | OPTIMIZE FOR UNKNOWN
   38           | PARAMETERIZATION SIMPLE
   39           | PARAMETERIZATION FORCED
   40           | RECOMPILE
   41           | ROBUST PLAN

   42 select_clause: simple_select
   43              | select_with_parens

   44 simple_select: SELECT opt_hint opt_distinct opt_top select_expr_list opt_from_clause opt_where opt_groupby opt_having
   45              | select_clause UNION opt_distinct select_clause
   46              | select_clause INTERSECT opt_distinct select_clause
   47              | select_clause EXCEPT opt_distinct select_clause

   48 opt_top: %empty
   49        | TOP top_count
   50        | TOP top_count WITH TIES
   51        | TOP top_percent PERCENT
   52        | TOP top_percent PERCENT WITH TIES

   53 top_count: INTNUM
   54          | '(' expr ')'

   55 top_percent: APPROXNUM
   56            | INTNUM
   57            | '(' expr ')'

   58 opt_for_clause: %empty
   59               | FOR BROWSE

   60 opt_where: %empty
   61          | WHERE expr

   62 opt_from_clause: %empty
   63                | FROM from_list

   64 opt_hint: %empty

   65 opt_groupby: %empty
   66            | GROUP BY expr_list

   67 opt_order_by: %empty
   68             | order_by

   69 order_by: ORDER BY sort_list
   70         | ORDER BY sort_list offset_fetch

   71 offset_fetch: OFFSET expr ROW
   72             | OFFSET expr ROWS
   73             | OFFSET expr ROW FETCH FIRST expr ROW ONLY
   74             | OFFSET expr ROW FETCH NEXT expr ROW ONLY
   75             | OFFSET expr ROW FETCH FIRST expr ROWS ONLY
   76             | OFFSET expr ROW FETCH NEXT expr ROWS ONLY
   77             | OFFSET expr ROWS FETCH FIRST expr ROW ONLY
   78             | OFFSET expr ROWS FETCH NEXT expr ROW ONLY
   79             | OFFSET expr ROWS FETCH FIRST expr ROWS ONLY
   80             | OFFSET expr ROWS FETCH NEXT expr ROWS ONLY

   81 sort_list: sort_key
   82          | sort_key ',' sort_list

   83 sort_key: expr opt_asc_desc

   84 opt_asc_desc: %empty
   85             | ASC
   86             | DESC

   87 opt_having: %empty
   88           | HAVING expr

   89 with_clause: WITH with_list

   90 with_list: common_table_expr
   91          | common_table_expr ',' with_list

   92 common_table_expr: NAME opt_derived_column_list AS select_with_parens

   93 opt_derived_column_list: %empty
   94                        | simple_ident_list_with_parens

   95 simple_ident_list_with_parens: '(' simple_ident_list ')'

   96 simple_ident_list: NAME
   97                  | NAME ',' simple_ident_list

   98 opt_distinct: %empty
   99             | ALL
  100             | DISTINCT

  101 select_expr_list: projection
  102                 | projection ',' select_expr_list

  103 projection: expr
  104           | expr column_label
  105           | expr AS column_label
  106           | '*'

  107 from_list: table_factor
  108          | table_factor ',' from_list

  109 table_factor: table_factor_non_join
  110             | joined_table

  111 table_factor_non_join: relation_factor opt_with_table_hint
  112                      | relation_factor AS relation_name opt_simple_ident_list_with_parens opt_with_table_hint
  113                      | select_with_parens AS relation_name opt_simple_ident_list_with_parens
  114                      | relation_factor relation_name opt_simple_ident_list_with_parens opt_with_table_hint
  115                      | select_with_parens relation_name opt_simple_ident_list_with_parens

  116 opt_with_table_hint: %empty
  117                    | WITH '(' table_hint_list ')'

  118 table_hint_list: table_hint
  119                | table_hint ',' table_hint_list
  120                | table_hint table_hint_list

  121 table_hint: table_hint_expr
  122           | NOEXPAND table_hint_expr

  123 table_hint_expr: func_expr
  124                | NAME
  125                | NAME COMP_EQ expr

  126 opt_simple_ident_list_with_parens: %empty
  127                                  | simple_ident_list_with_parens

  128 relation_factor: NAME
  129                | NAME '.' NAME
  130                | NAME '.' NAME '.' NAME
  131                | NAME '.' '.' NAME
  132                | NAME '.' NAME '.' NAME '.' NAME
  133                | NAME '.' '.' NAME '.' NAME
  134                | NAME '.' NAME '.' '.' NAME
  135                | NAME '.' '.' '.' NAME

  136 joined_table: '(' joined_table ')'
  137             | table_factor join_type JOIN table_factor ON expr
  138             | table_factor JOIN table_factor ON expr
  139             | table_factor join_type JOIN table_factor USING '(' simple_ident_list ')'
  140             | table_factor JOIN table_factor USING '(' simple_ident_list ')'
  141             | table_factor CROSS JOIN table_factor

  142 join_type: FULL join_outer join_hint
  143          | LEFT join_outer join_hint
  144          | RIGHT join_outer join_hint
  145          | INNER join_hint

  146 join_hint: %empty
  147          | LOOP
  148          | HASH
  149          | MERGE
  150          | REMOTE

  151 join_outer: %empty
  152           | OUTER

  153 expr_list: expr
  154          | expr ',' expr_list

  155 column_ref: NAME
  156           | NAME '.' NAME
  157           | NAME '.' '*'
  158           | NAME '.' NAME '.' NAME
  159           | NAME '.' NAME '.' '*'
  160           | NAME '.' NAME '.' NAME '.' NAME
  161           | NAME '.' NAME '.' NAME '.' '*'
  162           | NAME '.' '.' NAME '.' NAME
  163           | NAME '.' '.' NAME '.' '*'
  164           | NAME '.' NAME '.' NAME '.' NAME '.' NAME
  165           | NAME '.' NAME '.' NAME '.' NAME '.' '*'
  166           | NAME '.' '.' NAME '.' NAME '.' NAME
  167           | NAME '.' '.' NAME '.' NAME '.' '*'
  168           | NAME '.' NAME '.' '.' NAME '.' NAME
  169           | NAME '.' NAME '.' '.' NAME '.' '*'
  170           | NAME '.' '.' '.' NAME '.' NAME
  171           | NAME '.' '.' '.' NAME '.' '*'

  172 expr_const: STRING
  173           | INTNUM
  174           | APPROXNUM
  175           | BOOL
  176           | NULLX
  177           | QUESTIONMARK

  178 simple_expr: column_ref
  179            | expr_const
  180            | '(' expr_list ')'
  181            | case_expr
  182            | func_expr
  183            | select_with_parens
  184            | EXISTS select_with_parens

  185 arith_expr: simple_expr
  186           | '+' arith_expr
  187           | '-' arith_expr
  188           | arith_expr '+' arith_expr
  189           | arith_expr '-' arith_expr
  190           | arith_expr '*' arith_expr
  191           | arith_expr '/' arith_expr
  192           | arith_expr '%' arith_expr
  193           | arith_expr '^' arith_expr
  194           | arith_expr MOD arith_expr

  195 expr: arith_expr
  196     | expr COMP_LE expr
  197     | expr COMP_LT expr
  198     | expr COMP_EQ expr
  199     | expr COMP_GE expr
  200     | expr COMP_GT expr
  201     | expr COMP_NE expr
  202     | expr LIKE expr
  203     | expr NOT LIKE expr
  204     | expr AND expr
  205     | expr OR expr
  206     | NOT expr
  207     | expr IS NULLX
  208     | expr IS NOT NULLX
  209     | expr IS BOOL
  210     | expr IS NOT BOOL
  211     | expr IS UNKNOWN
  212     | expr IS NOT UNKNOWN
  213     | expr BETWEEN arith_expr AND arith_expr
  214     | expr NOT BETWEEN arith_expr AND arith_expr
  215     | expr IN in_expr
  216     | expr NOT IN in_expr
  217     | expr CNNOP expr

  218 in_expr: select_with_parens
  219        | '(' expr_list ')'

  220 case_expr: CASE case_arg when_clause_list case_default END

  221 case_arg: %empty
  222         | expr

  223 when_clause_list: when_clause
  224                 | when_clause when_clause_list

  225 when_clause: WHEN expr THEN expr

  226 case_default: %empty
  227             | ELSE expr

  228 func_expr: function_name '(' '*' ')'
  229          | function_name '(' distinct_or_all expr ')'
  230          | function_name '(' expr_list ')'
  231          | function_name '(' expr AS data_type ')'
  232          | function_name '(' ')'

  233 distinct_or_all: ALL
  234                | DISTINCT

  235 relation_name: NAME

  236 function_name: NAME

  237 column_label: NAME

  238 data_type: TINYINT
  239          | SMALLINT
  240          | MEDIUMINT
  241          | INTEGER
  242          | BIGINT
  243          | BOOLEAN
  244          | REAL
  245          | DATETIME


Terminals, with rules where they appear

$end (0) 0
'%' (37) 192
'(' (40) 7 8 12 54 57 95 117 136 139 140 180 219 228 229 230 231 232
')' (41) 7 8 12 54 57 95 117 136 139 140 180 219 228 229 230 231 232
'*' (42) 106 157 159 161 163 165 167 169 171 190 228
'+' (43) 186 188
',' (44) 14 82 91 97 102 108 119 154
'-' (45) 187 189
'.' (46) 129 130 131 132 133 134 135 156 157 158 159 160 161 162 163
    164 165 166 167 168 169 170 171
'/' (47) 191
';' (59) 3
'^' (94) 193
error (256)
NAME (258) 92 96 97 124 125 128 129 130 131 132 133 134 135 155 156
    157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 235
    236 237
STRING (259) 172
INTNUM (260) 24 31 33 34 35 53 56 173
BOOL (261) 175 209 210
APPROXNUM (262) 30 32 55 174
NULLX (263) 176 207 208
UNKNOWN (264) 37 211 212
QUESTIONMARK (265) 177
CONDITIONLESS_JOIN (266)
CROSS (267) 141
FULL (268) 142
INNER (269) 145
JOIN (270) 20 21 22 137 138 139 140 141
LEFT (271) 143
NATURAL (272)
RIGHT (273) 144
ON (274) 137 138
USING (275) 139 140
UNION (276) 17 18 19 45
EXCEPT (277) 47
INTERSECT (278) 46
OR (279) 205
AND (280) 204 213 214
NOT (281) 203 206 208 210 212 214 216
COMP_LE (282) 196
COMP_LT (283) 197
COMP_EQ (284) 30 31 32 33 125 198
COMP_GT (285) 200
COMP_GE (286) 199
COMP_NE (287) 201
CNNOP (288) 217
LIKE (289) 202 203
BETWEEN (290) 213 214
IN (291) 215 216
IS (292) 207 208 209 210 211 212
MOD (293) 194
UMINUS (294)
ADD (295)
ANY (296)
ALL (297) 99 233
ALTER (298)
AS (299) 92 105 112 113 231
ASC (300) 85
BEGI (301)
BIGINT (302) 242
BINARY (303)
BOOLEAN (304) 243
BOTH (305)
BROWSE (306) 59
BY (307) 66 69 70
CASCADE (308)
CASE (309) 220
CHARACTER (310)
CLUSTER (311)
COMMENT (312)
COMMIT (313)
CONSISTENT (314)
COLUMN (315)
COLUMNS (316)
CREATE (317)
CREATETIME (318)
CURRENT_USER (319)
CHANGE_OBI (320)
SWITCH_CLUSTER (321)
DATE (322)
DATETIME (323) 245
DEALLOCATE (324)
DECIMAL (325)
DEFAULT (326)
DELETE (327)
DESC (328) 86
DESCRIBE (329)
DISTINCT (330) 100 234
DOUBLE (331)
DROP (332)
DUAL (333)
ELSE (334) 227
END (335) 220
END_P (336) 1
ERROR (337)
EXECUTE (338)
EXISTS (339) 184
EXPLAIN (340)
FETCH (341) 73 74 75 76 77 78 79 80
FIRST (342) 73 75 77 79
FLOAT (343)
FOR (344) 37 59
FROM (345) 63
FROZEN (346)
FORCE (347) 25 26
GLOBAL (348)
GLOBAL_ALIAS (349)
GRANT (350)
GROUP (351) 15 16 66
HAVING (352) 88
HINT_BEGIN (353)
HINT_END (354)
HOTSPOT (355)
IDENTIFIED (356)
IF (357)
INTEGER (358) 241
INSERT (359)
INTO (360)
KEY (361)
LEADING (362)
LIMIT (363)
LOCAL (364)
LOCKED (365)
MEDIUMINT (366) 240
MEMORY (367)
MODIFYTIME (368)
MASTER (369)
NEXT (370) 74 76 78 80
NOEXPAND (371) 122
NUMERIC (372)
OFFSET (373) 71 72 73 74 75 76 77 78 79 80
ONLY (374) 73 74 75 76 77 78 79 80
ORDER (375) 16 25 69 70
OPTION (376) 12
OUTER (377) 152
PARAMETERS (378)
PERCENT (379) 51 52
PASSWORD (380)
PRECISION (381)
PREPARE (382)
PRIMARY (383)
READ_STATIC (384)
REAL (385) 244
RENAME (386)
REPLACE (387)
RESTRICT (388)
PRIVILEGES (389)
REVOKE (390)
ROLLBACK (391)
ROW (392) 71 73 74 75 76 77 78
ROWS (393) 72 75 76 77 78 79 80
KILL (394)
READ_CONSISTENCY (395)
SCHEMA (396)
SCOPE (397)
SELECT (398) 44
SESSION (399)
SESSION_ALIAS (400)
SET (401)
SHOW (402)
SMALLINT (403) 239
SNAPSHOT (404)
SPFILE (405)
START (406)
STATIC (407)
SYSTEM (408)
STRONG (409)
SET_MASTER_CLUSTER (410)
SET_SLAVE_CLUSTER (411)
SLAVE (412)
TABLE (413)
TABLES (414)
THEN (415) 225
TIES (416) 50 52
TIME (417)
TIMESTAMP (418)
TINYINT (419) 238
TRAILING (420)
TRANSACTION (421)
TO (422)
TOP (423) 49 50 51 52
UPDATE (424)
USER (425)
VALUES (426)
VARCHAR (427)
VARBINARY (428)
WHERE (429) 61
WHEN (430) 225
WITH (431) 50 52 89 117
WORK (432)
PROCESSLIST (433)
QUERY (434)
CONNECTION (435)
WEAK (436)
LOOP (437) 20 147
HASH (438) 15 18 22 148
MERGE (439) 19 21 149
REMOTE (440) 150
CONCAT (441) 17
OPTIMIZE (442) 37
EXPAND (443) 23
VIEWS (444) 23
FAST (445) 24
DISABLE (446)
EXTERNALPUSHDOWN (447) 26
IGNORE_NONCLUSTERED_COLUMNSTORE_INDEX (448) 27
KEEP (449) 28
PLAN (450) 28 29 41
KEEPFIXED (451) 29
MAX_GRANT_PERCENT (452) 30 31
MIN_GRANT_PERCENT (453) 32 33
MAXDOP (454) 34
MAXRECURSION (455) 35
NO_PERFORMANCE_SPOOL (456) 36
PARAMETERIZATION (457) 38 39
SIMPLE (458) 38
FORCED (459) 39
RECOMPILE (460) 40
ROBUST (461) 41


Nonterminals, with rules where they appear

$accept (218)
    on left: 0
sql_stmt (219)
    on left: 1, on right: 0
stmt_list (220)
    on left: 2 3, on right: 1 3
stmt (221)
    on left: 4 5, on right: 2 3
select_stmt (222)
    on left: 6, on right: 5
select_with_parens (223)
    on left: 7 8, on right: 8 43 92 113 115 183 184 218
select_no_parens (224)
    on left: 9 10, on right: 6 7
opt_option_query_hint (225)
    on left: 11 12, on right: 9 10
query_hint_list (226)
    on left: 13 14, on right: 12 14
query_hint (227)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 41, on right: 13 14
select_clause (228)
    on left: 42 43, on right: 9 10 45 46 47
simple_select (229)
    on left: 44 45 46 47, on right: 42
opt_top (230)
    on left: 48 49 50 51 52, on right: 44
top_count (231)
    on left: 53 54, on right: 49 50
top_percent (232)
    on left: 55 56 57, on right: 51 52
opt_for_clause (233)
    on left: 58 59, on right: 9 10
opt_where (234)
    on left: 60 61, on right: 44
opt_from_clause (235)
    on left: 62 63, on right: 44
opt_hint (236)
    on left: 64, on right: 44
opt_groupby (237)
    on left: 65 66, on right: 44
opt_order_by (238)
    on left: 67 68, on right: 9 10
order_by (239)
    on left: 69 70, on right: 68
offset_fetch (240)
    on left: 71 72 73 74 75 76 77 78 79 80, on right: 70
sort_list (241)
    on left: 81 82, on right: 69 70 82
sort_key (242)
    on left: 83, on right: 81 82
opt_asc_desc (243)
    on left: 84 85 86, on right: 83
opt_having (244)
    on left: 87 88, on right: 44
with_clause (245)
    on left: 89, on right: 10
with_list (246)
    on left: 90 91, on right: 89 91
common_table_expr (247)
    on left: 92, on right: 90 91
opt_derived_column_list (248)
    on left: 93 94, on right: 92
simple_ident_list_with_parens (249)
    on left: 95, on right: 94 127
simple_ident_list (250)
    on left: 96 97, on right: 95 97 139 140
opt_distinct (251)
    on left: 98 99 100, on right: 44 45 46 47
select_expr_list (252)
    on left: 101 102, on right: 44 102
projection (253)
    on left: 103 104 105 106, on right: 101 102
from_list (254)
    on left: 107 108, on right: 63 108
table_factor (255)
    on left: 109 110, on right: 107 108 137 138 139 140 141
table_factor_non_join (256)
    on left: 111 112 113 114 115, on right: 109
opt_with_table_hint (257)
    on left: 116 117, on right: 111 112 114
table_hint_list (258)
    on left: 118 119 120, on right: 117 119 120
table_hint (259)
    on left: 121 122, on right: 118 119 120
table_hint_expr (260)
    on left: 123 124 125, on right: 121 122
opt_simple_ident_list_with_parens (261)
    on left: 126 127, on right: 112 113 114 115
relation_factor (262)
    on left: 128 129 130 131 132 133 134 135, on right: 111 112 114
joined_table (263)
    on left: 136 137 138 139 140 141, on right: 110 136
join_type (264)
    on left: 142 143 144 145, on right: 137 139
join_hint (265)
    on left: 146 147 148 149 150, on right: 142 143 144 145
join_outer (266)
    on left: 151 152, on right: 142 143 144
expr_list (267)
    on left: 153 154, on right: 66 154 180 219 230
column_ref (268)
    on left: 155 156 157 158 159 160 161 162 163 164 165 166 167 168
    169 170 171, on right: 178
expr_const (269)
    on left: 172 173 174 175 176 177, on right: 179
simple_expr (270)
    on left: 178 179 180 181 182 183 184, on right: 185
arith_expr (271)
    on left: 185 186 187 188 189 190 191 192 193 194, on right: 186
    187 188 189 190 191 192 193 194 195 213 214
expr (272)
    on left: 195 196 197 198 199 200 201 202 203 204 205 206 207 208
    209 210 211 212 213 214 215 216 217, on right: 54 57 61 71 72 73
    74 75 76 77 78 79 80 83 88 103 104 105 125 137 138 153 154 196
    197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212
    213 214 215 216 217 222 225 227 229 231
in_expr (273)
    on left: 218 219, on right: 215 216
case_expr (274)
    on left: 220, on right: 181
case_arg (275)
    on left: 221 222, on right: 220
when_clause_list (276)
    on left: 223 224, on right: 220 224
when_clause (277)
    on left: 225, on right: 223 224
case_default (278)
    on left: 226 227, on right: 220
func_expr (279)
    on left: 228 229 230 231 232, on right: 123 182
distinct_or_all (280)
    on left: 233 234, on right: 229
relation_name (281)
    on left: 235, on right: 112 113 114 115
function_name (282)
    on left: 236, on right: 228 229 230 231 232
column_label (283)
    on left: 237, on right: 104 105
data_type (284)
    on left: 238 239 240 241 242 243 244 245, on right: 231


State 0

    0 $accept: . sql_stmt $end
    1 sql_stmt: . stmt_list END_P
    2 stmt_list: . stmt
    3          | . stmt ';' stmt_list
    4 stmt: . %empty  [END_P, ';']
    5     | . select_stmt
    6 select_stmt: . select_no_parens
    7 select_with_parens: . '(' select_no_parens ')'
    8                   | . '(' select_with_parens ')'
    9 select_no_parens: . select_clause opt_order_by opt_for_clause opt_option_query_hint
   10                 | . with_clause select_clause opt_order_by opt_for_clause opt_option_query_hint
   42 select_clause: . simple_select
   43              | . select_with_parens
   44 simple_select: . SELECT opt_hint opt_distinct opt_top select_expr_list opt_from_clause opt_where opt_groupby opt_having
   45              | . select_clause UNION opt_distinct select_clause
   46              | . select_clause INTERSECT opt_distinct select_clause
   47              | . select_clause EXCEPT opt_distinct select_clause
   89 with_clause: . WITH with_list

    '('     shift, and go to state 1
    SELECT  shift, and go to state 2
    WITH    shift, and go to state 3

    $default  reduce using rule 4 (stmt)

    sql_stmt            go to state 4
    stmt_list           go to state 5
    stmt                go to state 6
    select_stmt         go to state 7
    select_with_parens  go to state 8
    select_no_parens    go to state 9
    select_clause       go to state 10
    simple_select       go to state 11
    with_clause         go to state 12


State 1

    7 select_with_parens: . '(' select_no_parens ')'
    7                   | '(' . select_no_parens ')'
    8                   | . '(' select_with_parens ')'
    8                   | '(' . select_with_parens ')'
    9 select_no_parens: . select_clause opt_order_by opt_for_clause opt_option_query_hint
   10                 | . with_clause select_clause opt_order_by opt_for_clause opt_option_query_hint
   42 select_clause: . simple_select
   43              | . select_with_parens
   44 simple_select: . SELECT opt_hint opt_distinct opt_top select_expr_list opt_from_clause opt_where opt_groupby opt_having
   45              | . select_clause UNION opt_distinct select_clause
   46              | . select_clause INTERSECT opt_distinct select_clause
   47              | . select_clause EXCEPT opt_distinct select_clause
   89 with_clause: . WITH with_list

    '('     shift, and go to state 1
    SELECT  shift, and go to state 2
    WITH    shift, and go to state 3

    select_with_parens  go to state 13
    select_no_parens    go to state 14
    select_clause       go to state 10
    simple_select       go to state 11
    with_clause         go to state 12


State 2

   44 simple_select: SELECT . opt_hint opt_distinct opt_top select_expr_list opt_from_clause opt_where opt_groupby opt_having
   64 opt_hint: . %empty

    $default  reduce using rule 64 (opt_hint)

    opt_hint  go to state 15


State 3

   89 with_clause: WITH . with_list
   90 with_list: . common_table_expr
   91          | . common_table_expr ',' with_list
   92 common_table_expr: . NAME opt_derived_column_list AS select_with_parens

    NAME  shift, and go to state 16

    with_list          go to state 17
    common_table_expr  go to state 18


State 4

    0 $accept: sql_stmt . $end

    $end  shift, and go to state 19


State 5

    1 sql_stmt: stmt_list . END_P

    END_P  shift, and go to state 20


State 6

    2 stmt_list: stmt .  [END_P]
    3          | stmt . ';' stmt_list

    ';'  shift, and go to state 21

    $default  reduce using rule 2 (stmt_list)


State 7

    5 stmt: select_stmt .

    $default  reduce using rule 5 (stmt)


State 8

   43 select_clause: select_with_parens .

    $default  reduce using rule 43 (select_clause)


State 9

    6 select_stmt: select_no_parens .

    $default  reduce using rule 6 (select_stmt)


State 10

    9 select_no_parens: select_clause . opt_order_by opt_for_clause opt_option_query_hint
   45 simple_select: select_clause . UNION opt_distinct select_clause
   46              | select_clause . INTERSECT opt_distinct select_clause
   47              | select_clause . EXCEPT opt_distinct select_clause
   67 opt_order_by: . %empty  [')', END_P, FOR, OPTION, ';']
   68             | . order_by
   69 order_by: . ORDER BY sort_list
   70         | . ORDER BY sort_list offset_fetch

    UNION      shift, and go to state 22
    EXCEPT     shift, and go to state 23
    INTERSECT  shift, and go to state 24
    ORDER      shift, and go to state 25

    $default  reduce using rule 67 (opt_order_by)

    opt_order_by  go to state 26
    order_by      go to state 27


State 11

   42 select_clause: simple_select .

    $default  reduce using rule 42 (select_clause)


State 12

    7 select_with_parens: . '(' select_no_parens ')'
    8                   | . '(' select_with_parens ')'
   10 select_no_parens: with_clause . select_clause opt_order_by opt_for_clause opt_option_query_hint
   42 select_clause: . simple_select
   43              | . select_with_parens
   44 simple_select: . SELECT opt_hint opt_distinct opt_top select_expr_list opt_from_clause opt_where opt_groupby opt_having
   45              | . select_clause UNION opt_distinct select_clause
   46              | . select_clause INTERSECT opt_distinct select_clause
   47              | . select_clause EXCEPT opt_distinct select_clause

    '('     shift, and go to state 1
    SELECT  shift, and go to state 2

    select_with_parens  go to state 8
    select_clause       go to state 28
    simple_select       go to state 11


State 13

    8 select_with_parens: '(' select_with_parens . ')'
   43 select_clause: select_with_parens .  [UNION, EXCEPT, INTERSECT, FOR, ORDER, OPTION]

    ')'  shift, and go to state 29

    $default  reduce using rule 43 (select_clause)

    Conflict between rule 43 and token ')' resolved as shift (UMINUS < ')').


State 14

    7 select_with_parens: '(' select_no_parens . ')'

    ')'  shift, and go to state 30


State 15

   44 simple_select: SELECT opt_hint . opt_distinct opt_top select_expr_list opt_from_clause opt_where opt_groupby opt_having
   98 opt_distinct: . %empty  [NAME, STRING, INTNUM, BOOL, APPROXNUM, NULLX, QUESTIONMARK, NOT, '+', '-', '*', '(', CASE, EXISTS, TOP]
   99             | . ALL
  100             | . DISTINCT

    ALL       shift, and go to state 31
    DISTINCT  shift, and go to state 32

    $default  reduce using rule 98 (opt_distinct)

    opt_distinct  go to state 33


State 16

   92 common_table_expr: NAME . opt_derived_column_list AS select_with_parens
   93 opt_derived_column_list: . %empty  [AS]
   94                        | . simple_ident_list_with_parens
   95 simple_ident_list_with_parens: . '(' simple_ident_list ')'

    '('  shift, and go to state 34

    $default  reduce using rule 93 (opt_derived_column_list)

    opt_derived_column_list        go to state 35
    simple_ident_list_with_parens  go to state 36


State 17

   89 with_clause: WITH with_list .

    $default  reduce using rule 89 (with_clause)


State 18

   90 with_list: common_table_expr .  ['(', SELECT]
   91          | common_table_expr . ',' with_list

    ','  shift, and go to state 37

    $default  reduce using rule 90 (with_list)


State 19

    0 $accept: sql_stmt $end .

    $default  accept


State 20

    1 sql_stmt: stmt_list END_P .

    $default  reduce using rule 1 (sql_stmt)


State 21

    2 stmt_list: . stmt
    3          | . stmt ';' stmt_list
    3          | stmt ';' . stmt_list
    4 stmt: . %empty  [END_P, ';']
    5     | . select_stmt
    6 select_stmt: . select_no_parens
    7 select_with_parens: . '(' select_no_parens ')'
    8                   | . '(' select_with_parens ')'
    9 select_no_parens: . select_clause opt_order_by opt_for_clause opt_option_query_hint
   10                 | . with_clause select_clause opt_order_by opt_for_clause opt_option_query_hint
   42 select_clause: . simple_select
   43              | . select_with_parens
   44 simple_select: . SELECT opt_hint opt_distinct opt_top select_expr_list opt_from_clause opt_where opt_groupby opt_having
   45              | . select_clause UNION opt_distinct select_clause
   46              | . select_clause INTERSECT opt_distinct select_clause
   47              | . select_clause EXCEPT opt_distinct select_clause
   89 with_clause: . WITH with_list

    '('     shift, and go to state 1
    SELECT  shift, and go to state 2
    WITH    shift, and go to state 3

    $default  reduce using rule 4 (stmt)

    stmt_list           go to state 38
    stmt                go to state 6
    select_stmt         go to state 7
    select_with_parens  go to state 8
    select_no_parens    go to state 9
    select_clause       go to state 10
    simple_select       go to state 11
    with_clause         go to state 12


State 22

   45 simple_select: select_clause UNION . opt_distinct select_clause
   98 opt_distinct: . %empty  ['(', SELECT]
   99             | . ALL
  100             | . DISTINCT

    ALL       shift, and go to state 31
    DISTINCT  shift, and go to state 32

    $default  reduce using rule 98 (opt_distinct)

    opt_distinct  go to state 39


State 23

   47 simple_select: select_clause EXCEPT . opt_distinct select_clause
   98 opt_distinct: . %empty  ['(', SELECT]
   99             | . ALL
  100             | . DISTINCT

    ALL       shift, and go to state 31
    DISTINCT  shift, and go to state 32

    $default  reduce using rule 98 (opt_distinct)

    opt_distinct  go to state 40


State 24

   46 simple_select: select_clause INTERSECT . opt_distinct select_clause
   98 opt_distinct: . %empty  ['(', SELECT]
   99             | . ALL
  100             | . DISTINCT

    ALL       shift, and go to state 31
    DISTINCT  shift, and go to state 32

    $default  reduce using rule 98 (opt_distinct)

    opt_distinct  go to state 41


State 25

   69 order_by: ORDER . BY sort_list
   70         | ORDER . BY sort_list offset_fetch

    BY  shift, and go to state 42


State 26

    9 select_no_parens: select_clause opt_order_by . opt_for_clause opt_option_query_hint
   58 opt_for_clause: . %empty  [')', END_P, OPTION, ';']
   59               | . FOR BROWSE

    FOR  shift, and go to state 43

    $default  reduce using rule 58 (opt_for_clause)

    opt_for_clause  go to state 44


State 27

   68 opt_order_by: order_by .

    $default  reduce using rule 68 (opt_order_by)


State 28

   10 select_no_parens: with_clause select_clause . opt_order_by opt_for_clause opt_option_query_hint
   45 simple_select: select_clause . UNION opt_distinct select_clause
   46              | select_clause . INTERSECT opt_distinct select_clause
   47              | select_clause . EXCEPT opt_distinct select_clause
   67 opt_order_by: . %empty  [')', END_P, FOR, OPTION, ';']
   68             | . order_by
   69 order_by: . ORDER BY sort_list
   70         | . ORDER BY sort_list offset_fetch

    UNION      shift, and go to state 22
    EXCEPT     shift, and go to state 23
    INTERSECT  shift, and go to state 24
    ORDER      shift, and go to state 25

    $default  reduce using rule 67 (opt_order_by)

    opt_order_by  go to state 45
    order_by      go to state 27


State 29

    8 select_with_parens: '(' select_with_parens ')' .

    $default  reduce using rule 8 (select_with_parens)


State 30

    7 select_with_parens: '(' select_no_parens ')' .

    $default  reduce using rule 7 (select_with_parens)


State 31

   99 opt_distinct: ALL .

    $default  reduce using rule 99 (opt_distinct)


State 32

  100 opt_distinct: DISTINCT .
